# ChangeLog for dev-libs/nettle
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/nettle/ChangeLog,v 1.4 2004/08/30 19:10:36 kugelfang Exp $

  30 Aug 2004; Danny van Dyk <kugelfang@gentoo.org> nettle-1.10.ebuild:
  Removed append-flags -fPIC on amd64. Not necessary anymore.

  20 Jul 2004; Rainer Groesslinger <scandium@gentoo.org> nettle-1.10.ebuild:
  stable on x86, ppc, sparc

*nettle-1.10 (11 Jul 2004)

  11 Jul 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Rainer Groesslinger #56156.