@@ -1,4 +1,4 @@
-MD5 97e677852f3b3e84852c66d9b58bf36d ChangeLog 594
+MD5 b6638ef49410a1de2b91ea2e82d096e4 ChangeLog 782
 MD5 74b7b586b24ae55e2ae052570d01b3ba metadata.xml 223
-MD5 0eec687ab75b566c2ba74c9f588d94d2 nettle-1.10.ebuild 827
+MD5 4ec76676b2e6a59259f6d975c842b9e8 nettle-1.10.ebuild 820
 MD5 23b2a1190eb15492bd60934979e29068 files/digest-nettle-1.10 63
