@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/nettle
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/nettle/ChangeLog,v 1.4 2004/08/30 19:10:36 kugelfang Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/nettle/ChangeLog,v 1.5 2004/10/01 10:39:48 kugelfang Exp $
+
+  01 Oct 2004; Danny van Dyk <kugelfang@gentoo.org> nettle-1.10.ebuild:
+  -fPIC _is_ necessary, but not in static libraries. --enable-shared lets it
+  build an additional shared library.
 
   30 Aug 2004; Danny van Dyk <kugelfang@gentoo.org> nettle-1.10.ebuild:
   Removed append-flags -fPIC on amd64. Not necessary anymore.
